# slack-birthday-notifier

./: Cargo.toml  LICENSE  bdays.csv  config.toml
src/: main.rs  todo.txt
